# terrabot

./: .gitignore
overview/: CoreDesign.ipynb
src/AI/Detection/: requirements.txt  snowDetectorCV.py  snow_detector.py  snow_detector_realtime.py
src/AI/Navigation/: path_navigator.py  requirements.txt
src/mainframe/: CMakeLists.txt  build.ps1  launch_system.ps1  main.cpp  run.ps1
